# ng-ui

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  makefile
NgUI/: AppRun  DeadGame-2048.desktop
data/: shader.fs  shader.vs
data/shader/: box.fs  box.vs  light.fs
include/: Box.hpp  Camera.hpp  Image.hpp  ImageLoader.hpp  Shader.hpp  Texture.hpp  Window.hpp
local/include/glad/: glad.h
local/lib/: libglfw.so.3.2
src/: Box.cpp  Camera.cpp  Image.cpp  ImageLoader.cpp  Shader.cpp  Texture.cpp  Window.cpp  glad.c  main.cpp
tool/: appimagetool-x86_64.AppImage
